--- a/homework/Final_Project/FinalProject.tex
+++ b/homework/Final_Project/FinalProject.tex
@@ -6,6 +6,7 @@
 % Useful packages
 \usepackage{graphicx}
 \usepackage{amsmath}
+\usepackage{float}
 
 \title{AM 213A HW3}
 \author{Joseph Moore}
@@ -107,8 +108,74 @@
 	\subparagraph{$\bullet$}
 		Both the Gauss-Jacobi and the Gauss-Seidel use an iterative method to solve $Ax = b$ for $x$. The Gauss-Jacobi simply splits up $A$ into its diagonal and remaining elements like $A = D + R$ and then follows $x^{k+1} = D^{-1}(b - Rx^k)$ until $x$ converges to a result. Gauss-Jacobi converges when $\rho(D^{-1}R) < 1$. Gauss-Jacobi further splits $R$ into upper and lower triangular matrices so that $A = L + D + U$. Gauss-Seidel follows $x^{k+1} = D^{-1}(b - Lx^{k+1} - Ux^{k})$ and converges for any symmetric, positive definite matrix. Gauss-Seidel converges faster than Gauss-Jacobi when they both converge. 
 		
+	\subparagraph{$\bullet$}
+		The fist two plot for $D = 2$ and $D = 5$ have no Jacobi algorithm because it wouldn't converge.
+		
+		\includegraphics[scale=0.9]{part1/prob_b/Figure_1}
+		
+		\includegraphics[scale=0.9]{part1/prob_b/Figure_2}
+		
+		\includegraphics[scale=0.9]{part1/prob_b/Figure_3}
+		
+		\includegraphics[scale=0.9]{part1/prob_b/Figure_4}
+		
+		\includegraphics[scale=0.9]{part1/prob_b/Figure_5}
+	
+	\subparagraph{$\bullet$}
+		The Jacobi algorithm did not converge on the first two runs likely because our matrix failed the test $\rho(D^{-1}R) < 1$. The Seidel algorithm converged for all of the runs as all the matrices were symmetric and positive definite. The Seidel algorithm also converged much faster each time both algorithms converged. The difference, however, seemed to close as the $D$ increased and Jacobi converged more easily.
+		
+	\subparagraph{$\bullet$}
+		Setting $a_{ii} = i$ resulted in convergence for the Seidel algorithm but not for the Jacobi algorithm.
+		
+\paragraph{b.2)}
+	\subparagraph{$\bullet$}
+		The Conjugate Gradient algorithm for $Ax = b$ can be thought of as the following steepest decent on a quadratic equation. Because a quadratic equation only has one minimum then we are guaranteed to approach that minimum as long as we follow a decent direction. Because we are choosing the steepest decent, which must be orthogonal to all of the previous iterations decent directions, we must find the minimum in m iterations.
+	
+	\subparagraph{$\bullet$}
+		First we acknowledge that all $r_i^Tr_j = 0$ for all $i \ne j$.
+		\[
+		p_0 = r_0 \Rightarrow p_0^Tr_0 = r_0^Tr_0
+		\]\[
+		p_1 = r_1 + \beta p_0 \Rightarrow p_1^Tr_1 = (r_1^T+\beta p_0^T)r_1 = r_1^Tr_1 + \beta p_0^Tr_1
+		= r_1^Tr_1 + \beta r_0^Tr_1 = r_1^Tr_1
+		\]\[
+		p_2 = r_2 + \beta p_1 \Rightarrow p_2^Tr_2 = (r_2^T+\beta p_1^T)r_2 = r_2^Tr_2 + \beta p_1^Tr_2
+		= r_2^Tr_2 + \beta r_1^Tr_2 = r_2^Tr_2
+		\]
+		Which continues like this showing that $p_k^Tr_k = r_k^Tr_k$. From this we see that $\alpha$ is the same. 
+		\[
+		E_{new} = r_k^Tr_k = p_k^Tr_k
+		\]
+		We now show that $\beta$ is the same for both. 
+		\[ 
+		r_{k+1} = r_k - \alpha Ap_k \Rightarrow Ap_k = r_k-r_{k+1}
+		\]\[
+		\beta = -\frac{r_{k+1}^Ty_k}{p_k^Ty_k} = -\frac{r_{k+1}^TAp_k}{p_k^TAp_k} =
+		-\frac{r_{k+1}^T(r_k-r_{k+1})}{p_k^T(r_k-r_{k+1})} = \frac{r_{k+1}^Tr_{k+1}}{p_k^Tr_k} 
+		= \frac{r_{k+1}^Tr_{k+1}}{r_k^Tr_k} = \frac{E_{new}}{E}
+		\]
+		From all this it becomes trivial to show that the two algorithms are equivalent. 
+	
+	\subparagraph{$\bullet$}
+		It's clear that the Conjugate Gradient algorithm not only requires more iterations but also gets worse as the D increases. This, however, is not the same as computational time. It might very well be that CG has much faster iterations. Below is a table showing the number of iterations for each algorithm and D value.
+		
+		\begin{table}[H]
+			\begin{tabular}{|l|l|l|l|l|l|}
+				\hline
+				& D = 2 & D = 5 & D = 10 & D = 100 & D = 1000 \\ \hline
+				Jacobi & \begin{tabular}[c]{@{}l@{}}Does not \\ converge\end{tabular} & \begin{tabular}[c]{@{}l@{}}Does not \\ converge\end{tabular} & 137 & 6 & 4 \\ \hline
+				Seidel & 59 & 17 & 10 & 4 & 3 \\ \hline
+				\begin{tabular}[c]{@{}l@{}}Conjugate \\ Gradient\end{tabular} & 1109 & 1707 & 3559 & 190429  & 19712896 \\ \hline
+			\end{tabular}
+		\end{table}
+	
+	\subparagraph{$\bullet$}
+		We can show that the eigenvalues of our matrix are $D-1$ and $D+9$ where $D$ is the value of the diagonal elements. This means that the matrix is already relatively well conditioned.
+	
 	\subparagraph{$\bullet$}	
-
+		For the 10x10 matrix where $a_{ii} = i$ CG converges in 4474 iterations. The 100x100 diverges immediately. In fact, from testing I find that anything over 12 diverges immediately.
+	
+		
 	
 \newpage	
 \title{\textbf{Part 2}}
